Agent support for multiple cube envs

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -14,28 +14,30 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cube solved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ca = CubeAgent()\n",
-    "ca.take_actions(lambda x: 11)"
+    "ca = CubeAgent(5)\n",
+    "ca.scrabmle_cubes_for_data()\n",
+    "ca.take_actions(lambda x: 5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cube 1 solved\n"
+     ]
+    }
+   ],
    "source": [
-    "ca.env.reset()\n",
-    "ca.take_actions(lambda x: 5)"
+    "ca.reset_envs()\n",
+    "ca.scrabmle_cubes_for_data()\n",
+    "ca.take_actions(lambda x: 9)"
    ]
   },
   {
@@ -44,7 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ca.env.reset()\n",
+    "ca.reset_envs()\n",
+    "ca.scrabmle_cubes_for_data()\n",
     "ca.take_actions(np.random.choice)"
    ]
   }
